checking on heroku

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,10 +98,10 @@
                 });
 
                 // If in Heroku
-                var latlng = $.getJSON("https://powerful-brook-42988.herokuapp.com/api/foodtrucks/", function(result) {
+                // var latlng = $.getJSON("https://powerful-brook-42988.herokuapp.com/api/foodtrucks/", function(result) {
 
                 // If on my LocalHost
-                // var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
+                var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
 
                   // console.log(result)
 
