--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,6 @@
           <ul><a href="{% url 'logout' %}?next={% url 'index_view' %}">Logout</a></ul>
         {% endif %}
       </div>
-      {% comment %}
       <div class="pusher">
         <div class="ui basic icon fixed menu">
           <a id="toggle" class="item">
@@ -52,24 +51,24 @@
             Menu
           </a>
         </div>
-      </div>
-      {% endcomment %}
 
+      </div>
       {% block content %}
       {% endblock %}
     </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/sidebar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/rating.min.js"></script>
     <link type="text/javascript" rel="stylesheet" href="{% static 'semantic.js' %}"  media="screen"/>
     <script type="text/javascript">
       $(function() {
         $('.ui.accordion').accordion();
-        // $('#toggle').click(function() {
-        //   $('.ui.sidebar').sidebar('toggle');
-        // });
-        // $('.rating').rating();
+        $('#toggle').click(function() {
+          $('.ui.sidebar').sidebar('toggle');
+        });
+        $('.rating').rating();
       });
       </script>
   </body>
