--- a/templates/base.html
+++ b/templates/base.html
@@ -34,15 +34,15 @@
     <div class="body">
       <div class="ui sidebar vertical left inverted menu">
         {% if not request.user.is_authenticated %}
-          <ui><a href="{% url 'login' %}">Login</a></ui>
-          <ul><a href="{% url 'user_create_view' %}">Create New User</a></ul>
+          <ui><a href="{% url 'login' %}"> <i class="user icon"></i> Login</a></ui>
+          <ul><a href="{% url 'user_create_view' %}"> <i class="add user icon"></i> Create New User</a></ul>
         {% else %}
-          <ul><a href="{% url 'index_view' %}">Home</a></ul>
+          <ul><a href="{% url 'index_view' %}"> <i class="home icon"></i> Home</a></ul>
           <ul><a href="{% url 'category_create_view' %}">New Food Category</a></ul>
-          <ul><a href="{% url 'foodtruck_create_view' %}">New Food Truck</a></ul>
-          <ul><a href="{% url 'commenter_create_view' %}">New Commenter</a></ul>
-          <ul><a href="{% url 'menu_create_view' %}">New Food Item</a></ul>
-          <ul><a href="{% url 'logout' %}?next={% url 'index_view' %}">Logout</a></ul>
+          <ul><a href="{% url 'foodtruck_create_view' %}"> <i class="bus icon"></i> New Food Truck</a></ul>
+          <ul><a href="{% url 'commenter_create_view' %}"> <i class="add user icon"></i> New Commenter</a></ul>
+          <ul><a href="{% url 'menu_create_view' %}"> <i class="food icon"></i> New Food Item</a></ul>
+          <ul><a href="{% url 'logout' %}?next={% url 'index_view' %}"> <i class="power icon"></i> Logout</a></ul>
         {% endif %}
       </div>
       <div class="pusher">
