--- a/templates/index.html
+++ b/templates/index.html
@@ -63,6 +63,28 @@
       {% endcomment %} -->
     </div>
     <div class="eight wide column">
+      Find Lat/Lng Through Address <br>
+      Address: <input type="text" name="" id="address">
+      <input type="button" value="Find Lat/Lng" onclick="codeAddress()">
+      <script type="text/javascript">
+        function codeAddress() {
+          var address = document.getElementById('address').value;
+          var geocoder = new google.maps.Geocoder();
+          geocoder.geocode({'address': address}, function(results, status) {
+            if (status == google.maps.GeocoderStatus.OK) {
+              // map.setCenter(results[0].geometry.location);
+              // var marker = new google.maps.Marker({
+              //     map: map,
+              //     position: results[0].geometry.location
+              // });
+              alert("Lat/Lng: " + results[0].geometry.location);
+            } else {
+              alert('Geocode was not successful for the following reason: ' + status);
+            }
+          });
+        }
+      </script>
+      <br>
       Find Your Address Based off Lat/Long <br>
       Latitude:
         <input type="text" id="Latitude" />
