trying to get the jquery on heroku working

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
       #options {
         color: white;
       }
+
     </style>
   </head>
   <body>
@@ -64,7 +65,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/sidebar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/rating.min.js"></script>
     <link type="text/javascript" rel="stylesheet" href="{% static 'semantic.js' %}"  media="screen"/>
@@ -75,6 +76,7 @@
           $('.ui.sidebar').sidebar('toggle');
         });
         $('.rating').rating();
+
       });
       </script>
   </body>
