--- a/templates/index.html
+++ b/templates/index.html
@@ -13,15 +13,15 @@
           <div class="title">
             <i class="dropdown icon"></i>
             <b>{{ truck }}</b>
-            <div class="ui star rating" data-rating="3">
-              <i class="icon"></i>
-              <i class="icon"></i>
-              <i class="icon"></i>
-              <i class="icon"></i>
-              <i class="icon"></i>
+            <div class="ui star rating">
+              <i class="icon" value="1"></i>
+              <i class="icon" value="2"></i>
+              <i class="icon" value="3"></i>
+              <i class="icon" value="4"></i>
+              <i class="icon" value="5"></i>
             </div>
           </div>
-          <div>
+          <div id="list">
             <p>
               <a href="{% url 'foodtruck_detail_view' truck.id %}">{{ truck }}</a><br>
               <b>Address: {{ truck.find_address }}<br></b>
@@ -221,7 +221,7 @@
                         })(marker, i, infowindow));
                         // bounds.extend(marker.position);
                         // Has the infowindows pop out instantly
-                        google.maps.event.trigger(marker, 'click');
+                        // google.maps.event.trigger(marker, 'click');
                       }
                     }
 
