--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
                 // var latlng = $.getJSON("https://powerful-brook-42988.herokuapp.com/api/foodtrucks/", function(result) {
 
                 // If on my LocalHost
-                var latlng = $.getJSON("http://localhost:8000/api/foodtrucks/", function(result) {
+                var latlng = $.getJSON("/api/foodtrucks/", function(result) {
 
                   // console.log(result)
 
