--- a/templates/base.html
+++ b/templates/base.html
@@ -37,15 +37,21 @@
     <div class="body">
       <div class="ui sidebar vertical left inverted menu">
         {% if not request.user.is_authenticated %}
-          <ui><a id="options" href="{% url 'login' %}"> <i class="user icon"></i> Login</a></ui>
+          <ul><a id="options" href="{% url 'login' %}"> <i class="user icon"></i> Login</a></ul>
           <ul><a id="options" href="{% url 'user_create_view' %}"> <i class="add user icon"></i> Create New User</a></ul>
         {% else %}
           <ul><a id="options" href="{% url 'index_view' %}"> <i class="home icon"></i> Home</a></ul>
-          <ul><a id="options" href="{% url 'commenter_detail_view' user.id %}">Profile</a></ul>
+          {% if not request.user.profile.is_driver %}
+            {% if not request.user.profile.is_user %}
+              <ul><a id="options" href="{% url 'profile_update_view' user.id %}"> <i class="add user icon"></i> New Profile</a></ul>
+            {% endif %}
+          {% endif %}
+          <ul><a id="options" href="{% url 'profile_detail_view' user.id %}"> <i class="users icon"></i> Profile</a></ul>
           <ul><a id="options" href="{% url 'category_create_view' %}">New Food Category</a></ul>
-          <ul><a id="options" href="{% url 'foodtruck_create_view' %}"> <i class="bus icon"></i> New Food Truck</a></ul>
-          <ul><a id="options" href="{% url 'commenter_create_view' %}"> <i class="add user icon"></i> New Commenter</a></ul>
-          <ul><a id="options" href="{% url 'menu_create_view' %}"> <i class="food icon"></i> New Food Item</a></ul>
+          {% if request.user.profile.is_driver %}
+            <ul><a id="options" href="{% url 'foodtruck_create_view' %}"> <i class="bus icon"></i> New Food Truck</a></ul>
+            <ul><a id="options" href="{% url 'menu_create_view' %}"> <i class="food icon"></i> New Food Item</a></ul>
+          {% endif %}
           <ul><a id="options" href="{% url 'logout' %}?next={% url 'index_view' %}"> <i class="power icon"></i> Logout</a></ul>
         {% endif %}
       </div>
