--- a/templates/foodtruck/profile_form.html
+++ b/templates/foodtruck/profile_form.html
@@ -5,6 +5,6 @@
   <form class="" action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" name="" value="Commenter">
+    <input type="submit" class="ui blue submit button" name="" value="Submit">
   </form>
 {% endblock %}
