--- a/templates/index.html
+++ b/templates/index.html
@@ -70,19 +70,117 @@
     <div class="eight wide column">
       Find Lat/Lng Through Address <br>
       Address: <input type="text" name="" id="address">
-      <input type="button" value="Find Lat/Lng" onclick="codeAddress()">
+      <input type="button" value="Find Lat/Lng" onclick="CodeAddress()">
       <script type="text/javascript">
-        function codeAddress() {
+        function CodeAddress() {
+          var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 14,
+            center: {lat: 34.8574, lng: -82.390189},
+          });
           var address = document.getElementById('address').value;
           var geocoder = new google.maps.Geocoder();
           geocoder.geocode({'address': address}, function(results, status) {
             if (status == google.maps.GeocoderStatus.OK) {
               // map.setCenter(results[0].geometry.location);
-              // var marker = new google.maps.Marker({
-              //     map: map,
-              //     position: results[0].geometry.location
-              // });
-              alert("Lat/Lng: " + results[0].geometry.location);
+              $.getJSON("/api/foodtrucks/", function(result) {
+
+                var icon = {
+                  Mexican: {url: 'http://cdn.mysitemyway.com/icons-watermarks/simple-red/iconathon/iconathon_food-truck/iconathon_food-truck_simple-red_512x512.png',
+                            size: new google.maps.Size(40, 40),
+                            origin: new google.maps.Point(0, 0),
+                            anchor: new google.maps.Point(17, 34),
+                            scaledSize: new google.maps.Size(30, 35)},
+                  Greek: {url: 'http://st.depositphotos.com/1005920/4316/i/110/depositphotos_43162503-Truck-icon.jpg',
+                            size: new google.maps.Size(50, 50),
+                            origin: new google.maps.Point(0, 0),
+                            anchor: new google.maps.Point(17, 34),
+                            scaledSize: new google.maps.Size(40, 45)},
+                  IceCream: {url: 'https://d30y9cdsu7xlg0.cloudfront.net/png/56083-200.png',
+                              size: new google.maps.Size(40, 40),
+                              origin: new google.maps.Point(0, 0),
+                              anchor: new google.maps.Point(17, 34),
+                              scaledSize: new google.maps.Size(30, 35)},
+                }
+
+                  for (var i = 0; i < result.length; i++) {
+                    // console.log(i);
+                    var obj = result[i];
+                    if (obj.category == 1) {
+                      if (obj.checked_in == true) {
+                        var marker = new google.maps.Marker({
+                          position: new google.maps.LatLng(obj.latitude, obj.longitude),
+                          icon: icon['Mexican'],
+                          map: map,
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                        });
+
+                        // Starting the infowindow popup
+                        var infowindow = new google.maps.InfoWindow();
+                        // Adds the click part of the infowindow on the marker
+                        google.maps.event.addListener(marker, 'click', (function(marker, i, infowindow) {
+                          return function() {
+                            infowindow.setContent(this.content);
+                            infowindow.open(map, this);
+                          };
+                        })(marker, i, infowindow));
+                        // bounds.extend(marker.position);
+                        // Has the infowindows pop out instantly
+                        // google.maps.event.trigger(marker, 'click');
+                      }
+                    }
+                    if (obj.category == 2) {
+                      if (obj.checked_in == true) {
+                        var marker = new google.maps.Marker({
+                          position: new google.maps.LatLng(obj.latitude, obj.longitude),
+                          icon: icon['Greek'],
+                          map: map,
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                        });
+
+                        // Starting the infowindow popup
+                        var infowindow = new google.maps.InfoWindow();
+                        // Adds the click part of the infowindow on the marker
+                        google.maps.event.addListener(marker, 'click', (function(marker, i, infowindow) {
+                          return function() {
+                            infowindow.setContent(this.content);
+                            infowindow.open(map, this);
+                          };
+                        })(marker, i, infowindow));
+                        // bounds.extend(marker.position);
+                        // Has the infowindows pop out instantly
+                        // google.maps.event.trigger(marker, 'click');
+                      }
+                    }
+                    if (obj.category == 3) {
+                      if (obj.checked_in == true) {
+                        var marker = new google.maps.Marker({
+                          position: new google.maps.LatLng(obj.latitude, obj.longitude),
+                          icon: icon['IceCream'],
+                          map: map,
+                          content: '<div class="scrollFix">' + '<b>' + obj.truck_name + '</b>' + "<br><hr>Latitude: " + obj.latitude + "<br/>Longitude: " + obj.longitude + '</div>'
+                        });
+
+                        // Starting the infowindow popup
+                        var infowindow = new google.maps.InfoWindow();
+                        // Adds the click part of the infowindow on the marker
+                        google.maps.event.addListener(marker, 'click', (function(marker, i, infowindow) {
+                          return function() {
+                            infowindow.setContent(this.content);
+                            infowindow.open(map, this);
+                          };
+                        })(marker, i, infowindow));
+                        // bounds.extend(marker.position);
+                        // Has the infowindows pop out instantly
+                        // google.maps.event.trigger(marker, 'click');
+                      }
+                    }
+                  }
+              });
+              var marker = new google.maps.Marker({
+                  map: map,
+                  position: results[0].geometry.location
+              });
+              // alert("Lat/Lng: " + results[0].geometry.location);
             } else {
               alert('Geocode was not successful for the following reason: ' + status);
             }
@@ -116,6 +214,7 @@
             }
       </script> <br> <br>
       <div id="map"></div>
+
           <script type="text/javascript">
 
           function initMap() {
