--- a/templates/auth/user_form.html
+++ b/templates/auth/user_form.html
@@ -5,6 +5,6 @@
   <form class="" action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" name="" value="New Driver!">
+    <input type="submit" name="" value="New User!">
   </form>
 {% endblock %}
