got a contact form working, still trying the star rating system

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,40 +7,49 @@
 
     <link type="text/css" rel="stylesheet" href="{% static 'semantic.css' %}"  media="screen"/>
 
-    <style>
-      .body {
-        padding: 25px;
-      }
-      #map {
-        height: 450px;
-        width: 125%;
-        float: right;
-      }
-      img {
-        height: 350px;
-        width: 370px;
-      }
-      .scrollFix {
-        line-height: 1.20;
-        /*overflow: hidden;*/
-        height: 60px;
-        width: 60px;
-      }
-      #options {
-        color: white;
-      }
-
-    </style>
+    {% block css %}
+    {% endblock %}
+      <style>
+        .body {
+          padding: 25px;
+        }
+        #map {
+          height: 450px;
+          width: 125%;
+          float: right;
+        }
+        img {
+          height: 350px;
+          width: 370px;
+        }
+        .scrollFix {
+          line-height: 1.20;
+          /*overflow: hidden;*/
+          height: 60px;
+          width: 60px;
+        }
+        #options {
+          color: white;
+        }
+        #profile_pic {
+          height: 250px;
+          width: 270px;
+        }
+      </style>
   </head>
   <body>
 
+
     <div class="body">
       <div class="ui sidebar vertical left inverted menu">
+        <ul id='options'>{{ request.user }}</ul>
+        <ul id="options" >{{ request.user.profile.email }}</ul>
         {% if not request.user.is_authenticated %}
           <ul><a id="options" href="{% url 'login' %}"> <i class="user icon"></i> Login</a></ul>
           <ul><a id="options" href="{% url 'user_create_view' %}"> <i class="add user icon"></i> Create New User</a></ul>
         {% else %}
           <ul><a id="options" href="{% url 'index_view' %}"> <i class="home icon"></i> Home</a></ul>
+          <ul><a id='options' href="{% url 'contact_me_view' %}"> <i class="mail square icon"></i> Contact Me</a></ul>
           {% if not request.user.profile.is_driver %}
             {% if not request.user.profile.is_user %}
               <ul><a id="options" href="{% url 'profile_update_view' user.id %}"> <i class="add user icon"></i> New Profile</a></ul>
@@ -75,16 +84,21 @@
     <script src="https://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/sidebar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.6/components/rating.min.js"></script>
+
     <link type="text/javascript" rel="stylesheet" href="{% static 'semantic.js' %}"  media="screen"/>
     <script type="text/javascript">
-      $(function() {
-        $('.ui.accordion').accordion();
-        $('#toggle').click(function() {
-          $('.ui.sidebar').sidebar('toggle');
+        $(function() {
+          $('.ui.accordion').accordion();
+          $('#toggle').click(function() {
+            $('.ui.sidebar').sidebar('toggle');
+          });
+          $('.star_rating_system').rating({
+            maxRating: 5
+          });
         });
-        $('.rating').rating();
-
-      });
       </script>
+
+      {% block js %}
+      {% endblock %}
   </body>
 </html>
