--- a/templates/foodtruck/profile_detail.html
+++ b/templates/foodtruck/profile_detail.html
@@ -4,7 +4,10 @@
   {% if object.user == request.user %}
     <h1>Welcome {{ request.user }}</h1>
 
+    <img id="profile_pic" src="{{ MEDIA_URL }}{{ object.image_url }}" alt="Picture of {{ object.image_url }}" />
+
     <a href="{% url 'image_update_view' user.id %}"> <i class="image icon"></i> Update Image</a>
+    <a href="{% url 'email_update_view' user.id %}">Update Email</a>
 
     <h3>Favorites</h3>
     {% for commenter in object.contents %}
