--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block content %}
 {{ request.user }}
@@ -13,13 +14,17 @@
           <div class="title">
             <i class="dropdown icon"></i>
             <b>{{ truck }}</b>
-            <div class="ui star rating">
-              <i class="icon" value="1"></i>
-              <i class="icon" value="2"></i>
-              <i class="icon" value="3"></i>
-              <i class="icon" value="4"></i>
-              <i class="icon" value="5"></i>
-            </div>
+            <form class="" action="" method="post">
+              {% csrf_token %}
+              <div class="ui star rating star_rating_system">
+                <i class="empty star icon" value="1"></i>
+                <i class="empty star icon" value="2"></i>
+                <i class="empty star icon" value="3"></i>
+                <i class="empty star icon" value="4"></i>
+                <i class="empty star icon" value="5"></i>
+              </div>
+            </form>
+
           </div>
           <div id="list">
             <p>
@@ -221,6 +226,7 @@
                 });
             }
       </script> <br> <br>
+
       <div id="map"></div>
 
           <script type="text/javascript">
@@ -333,6 +339,8 @@
           </script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJ2GhgOOCaoypV0JCC4NnxS-M0enWpN64&callback=initMap">
         </script>
+
+
     </div>
 </div>
 
