--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,12 @@
             <b>{{ truck }}</b>
             <form class="" action="" method="post">
               {% csrf_token %}
-              <div class="ui star rating star_rating_system">
-                <i class="empty star icon" value="1"></i>
-                <i class="empty star icon" value="2"></i>
-                <i class="empty star icon" value="3"></i>
-                <i class="empty star icon" value="4"></i>
-                <i class="empty star icon" value="5"></i>
+              <div class="star_rating_system">
+                <i class="empty star icon" name="rating" value="1" {% if truck.avg_rating == 1 %}checked='checked'{% endif %}></i>
+                <i class="empty star icon" name="rating" value="2" {% if truck.avg_rating == 2 %}checked='checked'{% endif %}></i>
+                <i class="empty star icon" name="rating" value="3" {% if truck.avg_rating == 3 %}checked='checked'{% endif %}></i>
+                <i class="empty star icon" name="rating" value="4" {% if truck.avg_rating == 4 %}checked='checked'{% endif %}></i>
+                <i class="empty star icon" name="rating" value="5" {% if truck.avg_rating == 5 %}checked='checked'{% endif %}></i>
               </div>
             </form>
 
@@ -345,5 +345,19 @@
 </div>
 
 
+
+{% endblock %}
+
+{% block js %}
+  <script src="https://code.jquery.com/ui/1.10.0/jquery-ui.js"></script>
+
+<script type="text/javascript">
+$(function() {
+  $('.ui.accordion').accordion({
+    active: false,
+    collapsible: true
+  });
+})
+</script>
 
 {% endblock %}
