--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block content %}
-{{ request.user }}
+<script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
   <h1>Find your Food Truck</h1>
 
