--- a/templates/foodtruck/foodtruck_detail.html
+++ b/templates/foodtruck/foodtruck_detail.html
@@ -10,7 +10,7 @@
   <br> <br>
   <div class="ui grid">
     <div class="eight wide column">
-      {{ object.avg_rating }}
+      Average Rating Of Truck: {{ object.show_avg_rating|floatformat:2 }}
       <form class="" action="{% url 'truck_rating_list_create_api_view' object.id %}" method="post">
         {% csrf_token %}
         <div class="star_rating">
@@ -26,9 +26,9 @@
         <form class="" action="{% url 'favorite_update_view' object.id %}" method="post">
           {% csrf_token %}
           {% if not object in request.user.profile.favorite.all %}
-            <button type="submit" class='ui blue submit button' name="favorite" value="Favorite"> <i class="star icon"></i> Favorite</button>
+            <button type="submit" class='ui green submit button' name="favorite" value="Favorite"> <i class="star icon"></i> Favorite</button>
           {% else %}
-            <button type="submit" class='ui blue submit button' name="favorite" value="Unfavorite"> <i class="empty star icon"></i> Unfavorite</button>
+            <button type="submit" class='ui red submit button' name="favorite" value="Unfavorite"> <i class="empty star icon"></i> Unfavorite</button>
           {% endif %}
         </form>
       {% endif %}
@@ -127,7 +127,14 @@
       $('document').ready(function(){
        $('.star_rating').rating(function(vote, event){
          console.log(vote, event);
-         $.post("{% url 'truck_rating_list_create_api_view' object.id %}", {voting: vote});
+         $.ajax({
+           url: "{% url 'truck_rating_list_create_api_view' object.id %}",
+           type: "POST",
+           data: {rating: vote, truck_rated: {{ object.id }}},
+           xhrFields: {
+            withCredentials: true
+           }
+         });
        });
      })
   </script>
